Sat Nov 29 01:16:53 1997  Mikael Djurfeldt  <mdj@kenneth>

	* init.c (scm_start_stack): Removed initialization of
	scm_the_last_stack_var.

	* backtrace.h: Declare scm_the_last_stack_var.

	* backtrace.c: Define scm_the_last_stack_var.

	* root.c (mark_root): Don't mark the_last_stack_var.

	* root.h (scm_root_state): Removed the_last_stack_var.

	* throw.c: Added #include "fluids.h"
	(ss_handler): `the-last-stack' is now a fluid.

	* (backtrace.h, backtrace.c, throw.c): Renamed the_last_stack_var
	--> the_last_stack_fluid.
	
	* backtrace.c: Added #include "fluids.h"
	(scm_init_backtrace): Initialize `the-last-stack' to a fluid.
	(scm_backtrace): `the-last-stack' is now a fluid.

	* init.c (scm_boot_guile_1): Moved call to scm_init_backtrace
	after scm_init_fluids.

1997-11-28  Tim Pierce  <twp@skepsis.com>

	* iselect.c: #ifdef USE_THREADS around thread-related includes.

	* dynl-dl.c (sysdep_dynl_func): Check both USCORE and
	DLSYM_ADDS_USCORE to decide whether to add an underscore.

1997-11-28  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* iselect.c (coop_next_runnable_thread,
	coop_wait_for_runnable_thread): Disable interrupts so that no
	async is executed before a potential error_revive.
	(scm_internal_select): Disable interrupts during the parts of the
	code which manipulate the sleep queue and the file descriptors.

1997-11-27  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* Makefile.am: Added iselect.c and iselect.h.

	* coop.c (coop_qinit): Initialize fields used by
	scm_internal_select.
	(coop_qget, coop_qget, coop_tmp_queue): Made global.
	(coop_next_runnable_thread): If GUILE_ISELECT enabled, use
	replacement in iselect.c.
	(coop_mutex_lock, coop_condition_variable_wait, coop_abort,
	coop_join): If GUILE_ISELECT enabled, use
	coop_wait_for_runnable_thread instead of
	coop_next_runnable_thread.
	(usleep, sleep): New replacements for system functions if
	GUILE_ISELECT is enabled.

	* coop-threads.h: Declare coop_wait_for_runnable_thread.
